--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=ArsipSurat
 APP_ENV=local
-APP_KEY=base64:zOu/Oy9VUw5M+hDSjZYL1EUtiwA0K1u71HyBGeyD3H4=
+APP_KEY=base64:YOUR_APP_KEY_HERE
 APP_DEBUG=true
 APP_URL=http://localhost
 
